--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,6 +1,16 @@
+*, ::after, ::before {
+  padding: 0px;
+  margin: 0px;
+}
+
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  margin: 5px;
+  padding: 10px;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .logo {
@@ -14,6 +24,7 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  
 }
 
 a {
@@ -23,3 +34,11 @@ a {
   /* this removes the line under the links */
   text-decoration: none;
 }
+
+
+div > * {
+  display: flex;
+  padding: 10px;
+  gap: 10px;
+}
+
