--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -2,6 +2,11 @@
 you'll learn about it later. */
 @import url('https://fonts.googleapis.com/css2?family=Besley:ital,wght@0,400;1,900&display=swap');
 
+*, ::after, ::before {
+  padding: 0px;
+  margin: 0px;
+}
+
 body {
   margin: 0;
   background: #eee;
@@ -12,7 +17,12 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content: space-between;
+  padding: 8px;
 }
+
+
 
 .profile-image {
   background: rebeccapurple;
@@ -45,4 +55,13 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  gap: 16px;
+}
+
+
+.left, .right {
+  display: flex;
+  align-items: center;
+  gap: 16px;
 }
