Add class selectors to html file and use selectors
Use Div tag to group the title and the images with text into two groups.
Add one more Div tag to nest the two Div in one container.
Add class selectors to to the Div tags, and use the selectors to declare
flex display.
Use flex-direction, align-items, and text-align to format the images and
text. Use flex-wrap to wrap the text.
Add paddings to space the text and images pairs from each other.
Add bottom margin to the title, and give the image text pairs a height
of 200px, to have give the a 200px width.
Add a gap of 52px between items.

--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -24,3 +24,33 @@ img {
   justify-content: center;
   background: #eee;
 }
+
+
+
+.title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 32px;
+}
+
+.plant-sections {
+  display: flex;
+  gap: 52px;
+  height: 200px;
+  padding: 0px 52px;
+}
+
+.section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.text{
+  margin-top: 10px;
+  display: flex;
+  text-align: center;
+  flex-wrap: wrap;
+}
+
