Add divs and classes to HTML and Rules to CSS
Use divs elements to divide modal container into two flex containers.
Add a margin to icon container, give header class font size and weight,
for heading text.
Give container with header, buttons, and text a top, right, and bottom
margins.
Give head-button class a bottom margin and space-between to space the
heading and the close button above text.
Add bottom margin to text to space it from cancel/continue buttons.

--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -20,6 +20,7 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
 }
 
 .icon {
@@ -33,6 +34,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: 15px;
 }
 
 .close-button {
@@ -66,4 +68,23 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+}
+
+.header {
+  font-size: 20px;
+  font-weight: 900;
+}
+
+.head-button {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+
+.column2 {
+  margin: 20px 15px 20px 0px;
+}
+
+.text {
+  margin-bottom: 20px;
 }
